--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    background-image: url('assets/dummy-bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
