--- a/ui/src/app/components/app.component.html
+++ b/ui/src/app/components/app.component.html
@@ -1,7 +1,6 @@
 
-
 <span class="claim">Only when the clothes fall does the true soul become visible.</span>
-<input class="tname" type="text" [formControl]="name" (keyup.enter)="load()">
+<input class="tname" type="text" placeholder="type twitter name without '@' " [formControl]="name" (keyup.enter)="load()">
 
 
 
