setup basic ui routing. reply url adjusted

--- a/ui/src/app/components/app.component.html
+++ b/ui/src/app/components/app.component.html
@@ -1,11 +1,1 @@
-
-<span class="claim">Only when the clothes fall does the true soul become visible.</span>
-<input class="tname" type="text" placeholder="type twitter name without '@' " [formControl]="name" (keyup.enter)="load()">
-
-
-
-<pre>
-user data : 
-
-{{ (data | async) | json }}
-</pre>
+<router-outlet></router-outlet>
