start page done

--- a/ui/src/app/components/dashboard/dashboard.component.html
+++ b/ui/src/app/components/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
-<p>dashboard works! {{twitterName}}</p>
+<!-- <p>dashboard works! {{twitterName}}</p>
 
 <pre>
 user data : 
 
 {{ (data | async) | json }}
 </pre> 
-    
+     -->
