--- a/ui/src/app/components/insights/insights.component.html
+++ b/ui/src/app/components/insights/insights.component.html
@@ -1,8 +1,8 @@
-<p>insights works! {{twitterName}}</p>
+<!-- <p>insights works! {{twitterName}}</p>
 
 <pre>
 user data : 
 
 {{ (data | async) | json }}
 </pre>
-    
+     -->
