--- a/ui/src/app/components/insights/insights.component.scss
+++ b/ui/src/app/components/insights/insights.component.scss
@@ -1,4 +1,8 @@
 :host {
     height: 100vh;
     display: flex;
+
+    background-image: url('/assets/screen-insights.png');
+    background-size: 101% 101%;
+    background-position: -10px -10px;   
 }
