--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+// https://github.com/tailwindlabs/tailwindcss/discussions/5258#discussioncomment-1979394
 
 html, body {
     min-height: 100vh;
