--- a/ui/src/app/components/dashboard/dashboard.component.scss
+++ b/ui/src/app/components/dashboard/dashboard.component.scss
@@ -1,4 +1,8 @@
 :host {
     height: 100vh;
     display: flex;
+
+    background-image: url('/assets/screen-dashboard.png');
+    background-size: 102% 105%;
+    background-position: -15px -20px;       
 }
