--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -1,2 +1,10 @@
-<span class="claim">Only when the clothes fall does the true soul become visible.</span>
-<input class="tname" type="text" placeholder="type twitter name without '@' " [formControl]="name" (keyup.enter)="load()">
+<div class="faces" [class.off]="unload">
+    <div class="face-item" *ngFor="let f of faces"><app-face [img]="f.img" [off]="f.off"></app-face></div>
+</div>
+
+<div class="area" [class.off]="unload">
+    <div class="bg-dark"></div>
+    <span class="claim" [class.off]="loading || unload">Only when the clothes fall does the true soul become visible.</span>
+    <input class="tname" [class.off]="loading || unload" type="text" placeholder="type twitter name without '@' " [formControl]="name" (keyup.enter)="load()">
+    <app-loader class="loader" *ngIf="loading"></app-loader>
+</div>
