--- a/ui/src/app/components/insights/insights.component.scss
+++ b/ui/src/app/components/insights/insights.component.scss
@@ -1,8 +1,241 @@
 :host {
     height: 100vh;
     display: flex;
+    flex-flow: row;
+    align-items: stretch;
 
-    background-image: url('/assets/screen-insights.png');
-    background-size: 101% 101%;
-    background-position: -10px -10px;   
+    header {
+        position: absolute;
+        z-index: 9;
+        // background-color: #7e909055;
+        height: 50px;
+        left: 0;
+        right: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: flex-end;
+
+        .menu{
+            width: 70px;
+            text-align: center;
+            font-size: 1.4rem;
+            color: #2c3c40;
+            padding-top: 20px;
+
+            .bar {
+                position: absolute;
+                cursor: pointer;
+                top: 22px;
+                left: 15px;
+                
+
+                span {
+                    display: block;
+                    width: 30px;
+                    height: 2px;
+                    background-color: #2c3c40;
+                    margin: 6px 0;
+                    transition: 0.4s; 
+
+                }
+            }
+        }
+
+        .search {
+            position: relative;
+            input {
+                background-color:#889c9d;
+                border: 1px solid #00000020;
+                height: 25px;
+                width: 250px;
+                outline: none;
+                padding: 0 10px;
+                z-index: 1;
+            }
+
+            fa-icon {
+                position: absolute;
+                right: 10px;
+                top:7px;
+                z-index: 2;
+                font-size: .8rem;
+                color: #586d72;
+            }
+        }
+    }
+
+    h2 {
+        padding: 0 70px;
+    }
+
+    .story-outer {
+        position: relative;
+        flex: 1.3;
+        order: 1;
+
+        .story {
+            position: absolute;
+            top: 60px;
+            bottom: 50px;
+            left: 0;
+            right: 0;
+            display: flex;
+            flex-flow: column;
+            row-gap: 0px;
+    
+            overflow-y: auto;    
+
+            .item {
+                padding: 20px 70px;
+                border-left: 2px solid transparent;
+                cursor: pointer;
+                transition: all .5s;
+
+                &.active {
+                    border-color: #2c3c40;
+                    background-color: #00000008;
+
+
+
+
+                }
+            }
+        }
+
+    }
+
+    .data {
+        flex: 1;
+        order: 2;
+        background-color: #7e9090;
+        padding: 100px 30px 30px 30px;
+        
+
+        img {
+            width: 100%;
+            height: auto;
+            margin-bottom: 20px;
+            box-shadow: 10px 10px 25px 0 #00000033;
+            transition: all .5s;
+
+            &:hover {
+                transform: scale(1.05);
+                box-shadow: 20px 20px 35px 0 #00000088;
+            }
+        }
+
+        
+    }
+
+    .profile {
+        flex: .6;
+        order: 3;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 100px 30px 100px 30px;
+        font-weight: 400;
+        
+
+        .avatar {
+            background-image: url('/assets/faces/f-0.png');
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 150px;
+            width: 150px;
+            border-radius: 100%;
+            outline: 10px solid #00000011;
+            
+        }
+
+        .name {
+            font-size: 1.2rem;
+            height: 80px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        .claim {
+            font-size: 1rem;
+            text-align: center;
+        }
+
+        .location {
+            padding-top: 50px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;         
+            align-items: center;
+            font-size: 1.4rem;
+
+            fa-icon {
+                color: #455a5f;
+            }
+
+            span {
+                font-size: 1rem;
+            }            
+        }
+
+        .follower {
+            padding-top: 50px;
+            width: 100%;
+        }
+
+        .tweets {
+            padding-top: 50px;
+            width: 100%;
+        }
+
+        .exp{
+            padding-top: 50px; 
+            width: 100%;
+            font-size: .8rem;
+            display: flex;
+
+            .for{
+                flex: 1;
+                text-align: left;
+                
+                padding-left: 10px;               
+            }
+
+            .since {
+                flex: 1;
+                text-align: right;
+                padding-right: 10px;
+                border-right: 2px solid #455a5f;
+            }
+
+            .val {
+                
+                font-size: 1rem;
+                font-weight: bold;
+            }
+        }
+    }
 }
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #4a737c #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 3px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #cfdadc;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #455a5f;
+    border-radius: 10px;
+    
+  }
