--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -1,4 +1,4 @@
-// https://github.com/tailwindlabs/tailwindcss/discussions/5258#discussioncomment-1979394
+@import url('https://fonts.googleapis.com/css2?family=Jura:wght@300;400;600&display=swap');
 
 html, body {
     min-height: 100vh;
@@ -7,4 +7,13 @@ html, body {
 
     background: rgb(141,163,165);
     background: linear-gradient(180deg, rgba(141,163,165,1) 0%, rgba(191,213,205,1) 100%);
+
+    font-family: 'Jura', sans-serif;
+    font-weight: 300;
+    font-size: 1.1rem;
+}
+
+
+h1, h2, h3 {
+    font-weight: 400;
 }
