--- a/ui/src/app/components/insights/insights.component.scss
+++ b/ui/src/app/components/insights/insights.component.scss
@@ -4,66 +4,6 @@
     flex-flow: row;
     align-items: stretch;
 
-    header {
-        position: absolute;
-        z-index: 9;
-        // background-color: #7e909055;
-        height: 50px;
-        left: 0;
-        right: 0;
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: flex-end;
-
-        .menu{
-            width: 70px;
-            text-align: center;
-            font-size: 1.4rem;
-            color: #2c3c40;
-            padding-top: 20px;
-
-            .bar {
-                position: absolute;
-                cursor: pointer;
-                top: 22px;
-                left: 15px;
-                
-
-                span {
-                    display: block;
-                    width: 30px;
-                    height: 2px;
-                    background-color: #2c3c40;
-                    margin: 6px 0;
-                    transition: 0.4s; 
-
-                }
-            }
-        }
-
-        .search {
-            position: relative;
-            input {
-                background-color:#889c9d;
-                border: 1px solid #00000020;
-                height: 25px;
-                width: 250px;
-                outline: none;
-                padding: 0 10px;
-                z-index: 1;
-            }
-
-            fa-icon {
-                position: absolute;
-                right: 10px;
-                top:7px;
-                z-index: 2;
-                font-size: .8rem;
-                color: #586d72;
-            }
-        }
-    }
 
     h2 {
         padding: 0 70px;
@@ -91,6 +31,10 @@
                 border-left: 2px solid transparent;
                 cursor: pointer;
                 transition: all .5s;
+
+                .btn-data {
+                    display: none;
+                };
 
                 &.active {
                     border-color: #2c3c40;
@@ -218,24 +162,4 @@
     }
 }
 
-/* ===== Scrollbar CSS ===== */
-  /* Firefox */
-  * {
-    scrollbar-width: auto;
-    scrollbar-color: #4a737c #ffffff;
-  }
-
-  /* Chrome, Edge, and Safari */
-  *::-webkit-scrollbar {
-    width: 3px;
-  }
-
-  *::-webkit-scrollbar-track {
-    background: #cfdadc;
-  }
-
-  *::-webkit-scrollbar-thumb {
-    background-color: #455a5f;
-    border-radius: 10px;
-    
-  }
+@import 'insights.mobile.scss'
