--- a/ui/src/app/components/insights/insights.mobile.scss
+++ b/ui/src/app/components/insights/insights.mobile.scss
@@ -33,13 +33,15 @@
                 position: relative;
                 top: unset;
                 bottom: unset;
+                padding-bottom: 100px;
+                
 
                 h2 {
-                    padding: 0px 25px 50px 25px;
+                    padding: 100px 25px 50px 25px;
                 }
 
                 .item {
-                    padding: 20px 25px;
+                    padding: 35px 25px;
 
                     .btn-data {
                         display: block;
@@ -52,10 +54,6 @@
             display: none;
         }
 
-        app-footer {
-            position: relative;
-            order: 4;
-        }
     }
     
 }
