--- a/ui/src/app/components/notfound/notfound.component.html
+++ b/ui/src/app/components/notfound/notfound.component.html
@@ -1,7 +1,8 @@
-<div class="box">
-    <span class="avatar"></span><br/>
-    <h1>404<br/> page not found</h1>
+<span class="avatar"></span>
 
+<h1>404<br/> page not found</h1>
+
+<div class="box">
     Sometimes life can lead us to a dead end.    
     I will help you to get out of this hopeless situation.
     <a href="/home">this way</a>
