--- a/ui/src/app/components/home/home.component.scss
+++ b/ui/src/app/components/home/home.component.scss
@@ -158,39 +158,4 @@
 }
 
 
-// mobile
-
-@media screen and (max-width:450px) {
-    :host{
-        .faces {
-            .face-item {
-                width: 33.3%;
-            }
-        }
-
-
-        .area {
-            height: 50%;
-
-            .tname {
-                width: 80%;
-            }
-
-            .claim {
-                white-space: unset;
-                width: 80%;
-                animation: none;
-            }
-        }
-    }      
-    
-}
-
-@media screen and (max-height:450px) {
-    :host{
-        .area {
-            height: 50%;
-        }
-    }      
-    
-}
+@import 'home.mobile.scss';
