--- a/ui/src/app/components/shared/footer/footer.component.scss
+++ b/ui/src/app/components/shared/footer/footer.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../styles.variables';
+
 :host {
     position: absolute;    
     bottom: 0;
@@ -18,11 +20,10 @@
     :first-child {
         font-size: 1.1rem;
     }
-
 }
 
 
-@media screen and (max-width:450px) {
+@media #{$phone} {
     :host{
 
         position: relative;
