basic ui stuff done, except dashboard

--- a/ui/src/app/components/about/about.component.html
+++ b/ui/src/app/components/about/about.component.html
@@ -1,8 +1,42 @@
 <app-header></app-header>
 
 <div class="page">
-    <h2>about works!</h2>
+    <h2>About <strong>undressor</strong></h2>
+
+    <div class="section">
+        <div class="content">
+            <h3>about works!</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="images">
+            <img src="assets/dummy/chart-weekly.png" />
+        </div>    
+    </div>
+
+    <div class="section">
+        <div class="content">
+            <h3>about works!</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. </p>
+        </div>
+        <div class="images">
+            <img src="assets/dummy/chart-daily.png" />
+        </div>    
+    </div>
+
+    <div class="section">
+        <div class="content">
+            <h3>about works!</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="images">
+
+        </div>
+    </div>
+
 </div>
+
+
+<div class="bg-right"></div>
 
 
 <app-footer></app-footer>
