--- a/ui/src/app/components/about/about.component.scss
+++ b/ui/src/app/components/about/about.component.scss
@@ -1,12 +1,76 @@
-@import '../../../styles.variables';
-
 :host {
     height: 100vh;
     display: flex;
-    flex-flow: column;
+    flex-flow: row;
+    align-items: stretch;    
+
+    background: rgb(141,163,165);
+    background: linear-gradient(180deg, rgba(141,163,165,1) 0%, rgba(191,213,205,1) 100%);
 
     .page {
-        padding: 40px 50px;
+        position: relative;
+        flex: 1;
+
+        display: flex;
+        flex-direction: column;
+
+        overflow-y: auto;
+
+        margin: 70px 0;
+        z-index: 1;
+
+    
+        h2{
+            padding-left: 70px;
+        }
+
+        .section {
+            padding: 40px 70px;
+            display: flex;
+            flex-flow: row;
+
+            .content {
+                flex: 1;
+                padding-right: 140px;
+                text-align: justify;
+
+                h3 {
+                    margin-top: 0;
+                }
+            }
+
+            .images {
+                flex: 1;
+                padding-top: 53px;
+
+                img {
+                    width: 100%;
+
+                    box-shadow: 10px 10px 25px 0 #00000033;
+                    transition: all .5s;
+        
+                    &:hover {
+                        transform: scale(1.05);
+                        box-shadow: 20px 20px 35px 0 #00000088;
+                    }                    
+                }
+
+                &:empty{
+                    display: none;
+                }
+            }
+        }
+    }
+
+    .bg-right {
+        position: absolute;
+        right: 0;
+        width: 50%;
+        top: 0;
+        bottom: 0;
+        background-color: #00000011;
+        z-index: 0;
     }
 }
 
+@import 'about.mobile.scss'
