--- a/ui/src/app/components/dashboard/dashboard.component.scss
+++ b/ui/src/app/components/dashboard/dashboard.component.scss
@@ -1,10 +1,26 @@
-@import '../../../styles.variables';
-
 :host {
     height: 100vh;
     display: flex;
+    flex-flow: row;
+    align-items: stretch;        
 
-    background-image: url('/assets/screen-dashboard.png');
-    background-size: 102% 105%;
-    background-position: -15px -20px;       
+    background: rgb(141,163,165);
+    background: linear-gradient(180deg, rgba(141,163,165,1) 0%, rgba(191,213,205,1) 100%);
+
+    .dashboard {
+        position: relative;
+        flex: 1;
+
+        margin: 50px 50px;
+
+        background-image: url('/assets/screen-dashboard.png');
+        background-position: -25px -25px;
+        background-size: auto 110%;
+        background-repeat: no-repeat;
+        
+        
+
+    }
 }
+
+@import 'dashboard.mobile.scss'
