--- a/ui/src/app/components/insights/insights.mobile.scss
+++ b/ui/src/app/components/insights/insights.mobile.scss
@@ -23,7 +23,39 @@
 
                     .btn-data {
                         display: block;
-                    };                    
+                    };             
+                    
+                    &.active {
+                        border-color: transparent;
+                        background-color: transparent;
+                    }                    
+
+                    .mobile-data {
+                        display: block;
+                        // background-color: #7e9090;
+                        background-color: #000;
+                        margin: -2px -27px;
+                        
+                        height: 0;
+                        padding: 0;
+                        opacity: 0;
+                        overflow: hidden;
+                        transition: all .5s;
+
+                        &.on{
+                            height: auto;
+                            padding: 50px 20px;
+                            opacity: 1;
+                        }
+
+                        img {
+                            width: 100%;
+                            height: auto;
+                            margin-bottom: 20px;
+                            box-shadow: 10px 10px 25px 0 #00000033;
+                            
+                        }                        
+                    }
                 }
             }
         }        
@@ -36,6 +68,8 @@
             justify-content: space-evenly;
             padding: 0 25px;
             height: 100vh;
+
+            overflow: auto;
 
             .avatar{
                 margin-top: 25px;
