--- a/ui/src/app/components/home/home.mobile.scss
+++ b/ui/src/app/components/home/home.mobile.scss
@@ -9,7 +9,7 @@
         }
         .area {
             border-color: #5CECFF88;
-            height: 35%;
+            // height: 35%;
 
             .tname {
                 width: 50%;
@@ -36,7 +36,7 @@
         }
 
         .area {
-            height: 35%;
+            // height: 35%;
             border-color: #5CECFFaa;
 
             .tname {
@@ -56,7 +56,7 @@
 @media screen and (max-height:450px) {
     :host{
         .area {
-            height: 50%;
+            // height: 50%;
         }
     }      
     
