--- a/ui/src/app/components/images/images.component.html
+++ b/ui/src/app/components/images/images.component.html
@@ -1,3 +1,10 @@
 <img src="assets/dummy/chart-interests.png" *ngIf="id == 'int'"/>
 <img src="assets/dummy/chart-lang-dev.png" *ngIf="id == 'lang'" />
 <img src="assets/dummy/chart-daily0.png" *ngIf="id == 'daily'" />
+
+
+<div class="chart-area">
+    <!-- <app-polar></app-polar> -->
+    <!-- <app-radar></app-radar> -->
+    <app-ring></app-ring>
+</div>
