--- a/ui/src/app/components/images/images.component.scss
+++ b/ui/src/app/components/images/images.component.scss
@@ -14,4 +14,13 @@
         width: 80%;
         height: auto;
     }
+
+    .chart-area {
+        position: absolute;
+        left: 10%;
+        right: 10%;
+        top: 20%;
+        bottom: 20%;
+        overflow: hidden;
+    }
 }
