--- a/ui/src/app/components/shared/charts/ring/ring.component.html
+++ b/ui/src/app/components/shared/charts/ring/ring.component.html
@@ -6,5 +6,5 @@
 </canvas>
 
 <div class="labels" #lbl>
-    <span *ngFor="let l of labels">{{l}}</span>
+    <span *ngFor="let l of lbls">{{l}}</span>
 </div>
