--- a/ui/src/app/components/images/images.component.html
+++ b/ui/src/app/components/images/images.component.html
@@ -4,7 +4,10 @@
 
 
 <div class="chart-area">
-    <!-- <app-polar></app-polar> -->
-    <!-- <app-radar></app-radar> -->
-    <app-ring></app-ring>
+    <app-polar [datavalues]="dsInterests" *ngIf="id == 'polar'"></app-polar>
+    <app-radar [datavalues]="dsInterests" *ngIf="id == 'radar'"></app-radar>
+    <app-ring  [datavalues]="dsLanguages" *ngIf="id == 'ring'"></app-ring>
+    <app-linearea [datavalues]="dsInterests" *ngIf="id == 'line'"></app-linearea>
+    <app-bar [datavalues]="dsInterests" *ngIf="id == 'bar'"></app-bar>
+    <app-tagcloud [datavalues]="dsWords" *ngIf="id == 'words'"></app-tagcloud>
 </div>
