--- a/ui/src/app/components/images/images.component.html
+++ b/ui/src/app/components/images/images.component.html
@@ -10,4 +10,5 @@
     <app-linearea [datavalues]="dsInterests" *ngIf="id == 'line'"></app-linearea>
     <app-bar [datavalues]="dsInterests" *ngIf="id == 'bar'"></app-bar>
     <app-tagcloud [datavalues]="dsWords" *ngIf="id == 'words'"></app-tagcloud>
+    <app-heatmap *ngIf="id == 'heat'"></app-heatmap>
 </div>
