--- a/ui/src/app/components/images/images.component.scss
+++ b/ui/src/app/components/images/images.component.scss
@@ -17,8 +17,8 @@
 
     .chart-area {
         position: absolute;
-        left: 20px;
-        right: 20px;
+        left: 7%;
+        right: 7%;
         top: 20%;
         bottom: 20%;
         overflow: hidden;
