--- a/ui/src/app/components/shared/charts/ring/ring.component.html
+++ b/ui/src/app/components/shared/charts/ring/ring.component.html
@@ -6,5 +6,10 @@
 </canvas>
 
 <div class="labels" #lbl>
-    <span *ngFor="let l of lbls">{{l}}</span>
+    <span *ngFor="let l of lbls">
+        <span class="lbl">{{l.lbl}}</span>
+        <span class="val">{{l.val == 0? '' : l.val}}</span>
+    </span>
 </div>
+
+<h2>{{title}}</h2>
