--- a/ui/src/app/components/images/images.component.html
+++ b/ui/src/app/components/images/images.component.html
@@ -4,11 +4,17 @@
 
 
 <div class="chart-area">
-    <app-polar [datavalues]="dsInterests" *ngIf="id == 'polar'"></app-polar>
+    <div class="h-multi" *ngIf="id == 'basics'">
+        <app-ring [datavalues]="(data$ | async)"></app-ring>
+        <app-ring [datavalues]="dsLanguages" title="tweets"></app-ring>
+    </div>    
+    <app-polar [datavalues]="dsInterests" *ngIf="id == 'interests'"></app-polar>
+    <app-tagcloud [datavalues]="dsWords" *ngIf="id == 'hashtags'"></app-tagcloud>
+    <app-heatmap *ngIf="id == 'weekly'"></app-heatmap>
+
     <app-radar [datavalues]="dsInterests" *ngIf="id == 'radar'"></app-radar>
-    <app-ring  [datavalues]="dsLanguages" *ngIf="id == 'ring'"></app-ring>
     <app-linearea [datavalues]="dsInterests" *ngIf="id == 'line'"></app-linearea>
     <app-bar [datavalues]="dsInterests" *ngIf="id == 'bar'"></app-bar>
-    <app-tagcloud [datavalues]="dsWords" *ngIf="id == 'words'"></app-tagcloud>
-    <app-heatmap *ngIf="id == 'heat'"></app-heatmap>
 </div>
+
+{{(data$ | async) | json}}
