--- a/ui/src/app/components/notfound/notfound.component.scss
+++ b/ui/src/app/components/notfound/notfound.component.scss
@@ -10,6 +10,10 @@
     justify-content: center;
     align-items: center;
 
+    background: rgb(141,163,165);
+    background: linear-gradient(180deg, rgba(141,163,165,1) 0%, rgba(191,213,205,1) 100%);
+
+
     .box {
         max-width: 400px;
         padding: 0 25px;
