--- a/ui/src/app/components/shared/charts/ring/ring.component.scss
+++ b/ui/src/app/components/shared/charts/ring/ring.component.scss
@@ -15,7 +15,12 @@
         margin: -2rem 0 0 0;
         padding: 0;
 
+        span.digit {
+            font-size: 3.4rem!important;
+        }
     }
+
+
 
     .labels{
         position: absolute;
