--- a/ui/src/app/components/images/images.component.scss
+++ b/ui/src/app/components/images/images.component.scss
@@ -30,14 +30,21 @@
             right: 0;
             bottom: 0;
 
-            display: flex;
-            flex-direction: row;
-            gap: 10%;
-
-            
+           
             :nth-child(1n) {
-                position: relative;
-                flex: 1;
+                position: absolute;
+                top:0;
+                bottom: 0;
+                left:0;
+                width: 45%;
+                right: auto;
+            }
+
+            :nth-child(1n+2) {
+                position: absolute;
+                left: auto;
+                width:45%;
+                right: 0;
             }
         }
     }
