--- a/ui/src/app/components/shared/charts/ring/ring.component.html
+++ b/ui/src/app/components/shared/charts/ring/ring.component.html
@@ -8,7 +8,7 @@
 <div class="labels" #lbl>
     <span *ngFor="let l of lbls">
         <span class="lbl">{{l.lbl}}</span>
-        <span class="val">{{l.val == 0? '' : l.val}}</span>
+        <span class="val">{{l.val}}</span>
     </span>
 </div>
 
