--- a/ui/src/app/components/images/images.component.scss
+++ b/ui/src/app/components/images/images.component.scss
@@ -15,6 +15,13 @@
         height: auto;
     }
 
+    .title {
+        position: absolute;
+        color: #84BCB9aa;
+        bottom: 50px;
+        font-size: 20px;
+    }
+
     .chart-area {
         position: absolute;
         left: 7%;
